# pipeline_dashboard_api_client_mvp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  m9-7-final-readiness-report.txt  pyproject.toml
src/pipeline_dashboard_api_client/: __init__.py  __main__.py  cache_contracts.py  cache_service.py  cache_store.py  cached_client.py  cli.py  client.py  contracts.py  parser.py  transport.py  version.py
src/pipeline_dashboard_api_client/cli/: __init__.py  cache_factory.py  cache_wiring.py  config.py  export_contracts.py  factory.py  json_exporter.py  main.py  parser.py  printer.py  protocols.py
src/pipeline_dashboard_api_client/cli/commands/: __init__.py  cache.py  dashboard.py  health.py  summary.py  validate.py
tests/: test_cache_contracts.py  test_cache_service.py  test_cache_store.py  test_cached_client.py  test_cli.py  test_cli_cache_commands.py  test_cli_cache_expiration.py  test_cli_cache_factory.py  test_cli_cache_failure_boundaries.py  test_cli_cache_lifecycle.py  test_cli_cache_mainline.py  test_cli_cache_wiring_contracts.py  test_cli_client_compatibility.py  test_cli_config.py  test_cli_dashboard_command.py  test_cli_dashboard_export.py  test_cli_export_contracts.py  test_cli_export_mainline.py  test_cli_factory.py  test_cli_health_command.py  test_cli_health_export.py  test_cli_json_export_boundaries.py  test_cli_json_exporter.py  test_cli_main.py  test_cli_multi_endpoint_cache.py  test_cli_offline_cache_fallback.py  test_cli_offline_endpoint_isolation.py  test_cli_parser.py  test_cli_printer.py  test_cli_summary_command.py  test_cli_summary_export.py  test_cli_validate_command.py  test_cli_validate_export.py  test_client.py  test_contracts.py  test_parser.py  test_transport.py  test_version.py
