[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-dashboard-api-client"
version = "0.1.0"
description = "Typed API client for the RADAR_SERVICE Pipeline Dashboard Backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RADAR_SERVICE" }
]
keywords = [
  "radar-service",
  "dashboard",
  "api-client",
  "pipeline",
  "automation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.scripts]
radar-dashboard-client = "pipeline_dashboard_api_client.cli.main:main"

[project.urls]
Repository = "https://github.com/Dai-Soai/pipeline_dashboard_api_client_mvp"
Issues = "https://github.com/Dai-Soai/pipeline_dashboard_api_client_mvp/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipeline_dashboard_api_client = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "RUF"
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline_dashboard_api_client"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"
pretty = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers"
]
